--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "dev": "npm-run-all --parallel server client",
     "client": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "npx playwright test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -76,5 +76,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.47.2"
   }
 }
