--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "matter-js": "^0.19.0",
     "mongoose": "^5.11.8",
     "nodemon": "^3.0.3",
+    "normalize-url": "^6.1.0",
     "npm-run-all": "^4.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
